# PaPy

./: .gitignore  CPAP.py  LICENSE.txt  README.md  README.txt  chemical_reaction.json  chronicles.txt  concentrations_Uranus.txt  concentrations_VenusPCM_molec.txt  concentrations_VenusPCM_vmr.txt  doc.txt  output_moche.txt  output_moche_O.txt  output_moche_O2.txt  output_moche_O3.txt  pyproject.toml  reactions_Uranus.txt  reactions_VenusPCM_molec.txt  reactions_VenusPCM_vmr.txt  setup.py  simple_output.txt  simple_output_C2H4.txt  simple_output_CH3CHO.txt  simple_output_CH4.txt  simple_output_H2O.txt  simple_output_HCO.txt  simple_output_HO2.txt  simple_output_O.txt  simple_output_O2.txt  simple_output_O3.txt  simple_output_O[3p].txt  simple_output_[3]CH2.txt  test_cpa.py  test_cpa_alt.py  test_tools.py  user_concentration_O3destruction_example.txt  user_concentration_example.txt  user_concentration_example_article.txt  user_model_O3destruction_example.txt  user_model_example.txt  (+1 more)
doc/: doc.txt
i__user_model/: convert_reaction_system_file.py
src/: CPA.py  cpa.py
src/chem_pathway_analysis/: cpa.py
src/i__user_model/: convert_concentration_file.py  convert_reaction_system_file.py
src/o__cpap_output/: output_moche.py
src/p__data_management/: data_tools.py  data_update.py  global_var.py
src/p__initialization/: __init__.py  init_pathways.py
src/p__pathways_analysis/: branching_points.py  main_loop.py
src/p__sub_pathways/: subpathway_analysis.py  (+1 more)
tools/: concentrations_VenusPCM.txt  convert_VenusPCMoutputs_to_inputsCPA.py  reactions_VenusPCM.txt
(+16 files in other folders)
