[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chem_pathway_analysis"
version = "0.8.0"
authors = [
  { name="Aurélien Stolzenbach", email="aurelien.stolzenbach@gmail.com" },
]
description = "A chemical pathways analysis package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU-GPL v3 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/OrelSto/chem_pathway_analysis"
"Bug Tracker" = "https://github.com/OrelSto/chem_pathway_analysis/issues"